<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">X5 Settings</string>
	<string name="app_author">Created by Stockwell (2011)</string>	
	<string name="enable_feedback">Enable Feedback</string>
	<string name="complete">Complete</string>
	<string name="complete_reboot">Complete, reboot for change to take affect</string>
	<string name="temp">Keypad backlight LEDs disabled, note this will not persist after reboot</string>
	<string name="exit">Exit</string>
	<string name="dup_filter">Enable Duplicated Filter</string>
	<string name="cpu_governor">Governor</string>
	<string name="min_fre">Minimum Frequency</string>
	<string name="max_fre">Maximum Frequency</string>
	<string name="io_sch">I/O Scheduler</string>
	<string name="use_phone_mic">Force phone mic with headset</string>	
	<string name="speakerphone_echo_fix">Fix speakerphone echo</string>
	<string name="disable_keypad_leds">Disable keypad LEDs</string>
	<string name="volumefactor">Voice Volume</string>
	<string name="sound_options">Other Options</string>
	<string name="gemini">Enable Gemini JPEG encoding engine</string>
<!-- about -->
        <string name="app_summary">For any questions or queries regarding X5settings or the u8800 Miui port, contact Stockwell at www.xda-developers.com</string>
	<string name="dedication">Dedication</string>
	<string name="thanks">This app and Miui port would not have been possible without the help and cumulative efforts of many people. I would especially like to thank the fellow developers on xda-developers - dzo, franciscofranco, ksatta and genokolar - for their work on the u8800, and the many who donated toward this project to ensure its continued existence.</string>
	<string name="support">Support</string>
	<string name="donators">Donators</string>
	<string name="texview"> </string>
	<string name="empty">Empty Set</string>
	<string name="test">Test</string>
	<string-array name="menuItems_array">
		<item>Softkey Haptic Feedback</item>
		<item>Touchscreen Filter</item>
		<item>Notification LED</item>
		<item>I/O Scheduler</item>
		<item>Audio Settings</item>
		<item>Miscellaneous</item>
	</string-array>
	<string-array name="sel_led">
		<item>Disable during sleep</item>
		<item>Enable during sleep</item>
		<item>Backlight notification</item>
	</string-array>
	<string-array name="donators">
		<item>Tommo88</item>
		<item>Ho Made</item>
		<item>P. Santos</item>
		<item>haydnlj</item>
		<item>khunjj</item>
		<item>N. Kesina</item>
		<item>R. Rhbäck</item>
		<item>Gefjon</item>
		<item>bazz07</item>
		<item>L. Luc</item>
		<item>saran</item>
		<item>C. Grama</item>
		<item>sergejk</item>
		<item>A. Robson</item>
		<item>Trevh</item>
	</string-array>
</resources>
